k8s-gitops/overlays/staging/ingress-staging-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tv-dashboard-ingress
  annotations:
    networking.gke.io/managed-certificates: "staging-tv-dashboard-ssl"
spec:
  rules:
  - host: staging.tv-hub.navillasa.dev
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: staging-backend-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-frontend-service
            port:
              number: 80
